--- a/courier-h5/css/index.css
+++ b/courier-h5/css/index.css
@@ -389,20 +389,20 @@ html,body,.container,.page{
     width: 64.3705%
 }
 .pgback1{
-    bottom: 4%
+    bottom: 2rem
 }
 .pgback2{
-    bottom: 15%
+    bottom: 7rem
 }
 .pgback3{
-    bottom: 3%
+    bottom: 2rem
 }
 .pgback4{
-    bottom: -7.5%
+    bottom: -3.5rem
 }
 .pgback5,
 .pgback6{
-    bottom: 4%;
+    bottom: 1.8rem;
     z-index: 49
 }
 .see-more{
